@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016 SnappyData, Inc. All rights reserved.
+ * Copyright (c) 2017 SnappyData, Inc. All rights reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you
  * may not use this file except in compliance with the License. You
@@ -98,8 +98,8 @@ allprojects {
     productName = 'SnappyData'
     scalaBinaryVersion = '2.11'
     scalaVersion = scalaBinaryVersion + '.8'
-    sparkVersion = '2.0.0'
-    snappySparkVersion = '2.0.2.5'
+    sparkVersion = '2.1.1'
+    snappySparkVersion = '2.1.1.1'
     sparkDistName = "spark-${sparkVersion}-bin-hadoop2.7"
     log4jVersion = '1.2.17'
     slf4jVersion = '1.7.21'
@@ -203,6 +203,14 @@ task cleanDUnit << {
   delete "${snappyProductDir}/work", "${snappyProductDir}/logs"
   delete "${sparkProductDir}/work", "${sparkProductDir}/logs"
 }
+task cleanSecurityDUnit << {
+  String workingDir = "${testResultsBase}/dunit-security"
+  delete workingDir
+  file(workingDir).mkdirs()
+  // clean spark cluster directories
+  delete "${snappyProductDir}/work", "${snappyProductDir}/logs"
+  delete "${sparkProductDir}/work", "${sparkProductDir}/logs"
+}
 task cleanAllReports << {
   String workingDir = "${testResultsBase}/combined-reports"
   delete workingDir
@@ -213,7 +221,6 @@ task cleanQuickstart << {
   delete workingDir
   file(workingDir).mkdirs()
 }
-
 
 subprojects {
   // the run task for a selected sub-project
@@ -286,6 +293,7 @@ subprojects {
 
     include '**/*.class'
     exclude '**/*DUnitTest.class'
+    exclude '**/*DUnitSecurityTest.class'
     exclude '**/*DUnitSingleTest.class'
     exclude '**/*TestBase.class'
 
@@ -305,6 +313,7 @@ subprojects {
   task dunitTest(type: Test) {
     dependsOn ':cleanDUnit'
     dependsOn ':product'
+    dependsOn ':copyShadowJars'
     maxParallelForks = 1
     minHeapSize '1536m'
     maxHeapSize '1536m'
@@ -314,16 +323,18 @@ subprojects {
                '-XX:CMSInitiatingOccupancyFraction=50',
                '-XX:+CMSClassUnloadingEnabled', '-ea']
 
-    def dunitTests = fileTree(dir: testClassesDir, include: '**/*DUnitTest.class')
-    FileTree includeTestFiles = dunitTests
     def single = rootProject.hasProperty('dunit.single') ?
         rootProject.property('dunit.single') : null
-    int dunitFrom = rootProject.hasProperty('dunit.from') ?
+    if (single == null || single.length() == 0) {
+      def dunitTests = fileTree(dir: testClassesDir,
+          includes: ['**/*DUnitTest.class'],
+          excludes: ['**/*DUnitSecurityTest.class'])
+      FileTree includeTestFiles = dunitTests
+      int dunitFrom = rootProject.hasProperty('dunit.from') ?
           getLast(includeTestFiles, rootProject.property('dunit.from')) : 0
-    int dunitTo = rootProject.hasProperty('dunit.to') ?
+      int dunitTo = rootProject.hasProperty('dunit.to') ?
           getLast(includeTestFiles, rootProject.property('dunit.to')) : includeTestFiles.size()
 
-    if (single == null || single.length() == 0) {
       int begin = dunitFrom != -1 ? dunitFrom : 0
       int end = dunitTo != -1 ? dunitTo : includeTestFiles.size()
       def filteredSet = includeTestFiles.drop(begin).take(end-begin+1).collect {f -> "**/" + f.name}
@@ -336,6 +347,7 @@ subprojects {
       include single
     }
     exclude '**/*Suite.class'
+    exclude '**/*DUnitSecurityTest.class'
 
     workingDir = "${testResultsBase}/dunit"
 
@@ -351,6 +363,62 @@ subprojects {
       String now = new Date().format('yyyy-MM-dd HH:mm:ss.SSS Z')
       def progress = new File(workingDir, 'progress.txt')
       progress << "${eol}${now} ========== STARTING DUNIT TEST SUITE FOR ${project.name} ==========${eol}${eol}"
+    }
+  }
+
+  task dunitSecurityTest(type: Test) {
+    dependsOn ':cleanSecurityDUnit'
+    dependsOn ':product'
+    dependsOn ':copyShadowJars'
+    maxParallelForks = 1
+    minHeapSize '1536m'
+    maxHeapSize '1536m'
+
+    jvmArgs = ['-XX:+HeapDumpOnOutOfMemoryError',
+               '-XX:+UseParNewGC', '-XX:+UseConcMarkSweepGC',
+               '-XX:CMSInitiatingOccupancyFraction=50',
+               '-XX:+CMSClassUnloadingEnabled', '-ea']
+
+    def single = rootProject.hasProperty('dunitSecurity.single') ?
+        rootProject.property('dunitSecurity.single') : null
+    if (single == null || single.length() == 0) {
+      def dunitSecurityTests = fileTree(dir: testClassesDir,
+          includes: ['**/*DUnitSecurityTest.class'],
+          excludes: ['**/*DUnitTest.class'])
+      FileTree includeTestFiles = dunitSecurityTests
+      int dunitFrom = rootProject.hasProperty('dunitSecurity.from') ?
+          getLast(includeTestFiles, rootProject.property('dunitSecurity.from')) : 0
+      int dunitTo = rootProject.hasProperty('dunitSecurity.to') ?
+          getLast(includeTestFiles, rootProject.property('dunitSecurity.to')) : includeTestFiles.size()
+
+      int begin = dunitFrom != -1 ? dunitFrom : 0
+      int end = dunitTo != -1 ? dunitTo : includeTestFiles.size()
+      def filteredSet = includeTestFiles.drop(begin).take(end-begin+1).collect {f -> "**/" + f.name}
+      if (begin != 0 || end != includeTestFiles.size()) {
+        println("Picking tests :")
+        filteredSet.each { a -> println(a) }
+      }
+      include filteredSet
+    } else {
+      include single
+    }
+    exclude '**/*Suite.class'
+    exclude '**/*DUnitTest.class'
+
+    workingDir = "${testResultsBase}/dunit-security"
+
+    binResultsDir = file("${workingDir}/binary/${project.name}")
+    reports.html.destination = file("${workingDir}/html/${project.name}")
+    reports.junitXml.destination = file(workingDir)
+
+    systemProperties 'java.net.preferIPv4Stack': 'true',
+                     'SNAPPY_HOME': snappyProductDir
+
+    doFirst {
+      String eol = System.getProperty('line.separator')
+      String now = new Date().format('yyyy-MM-dd HH:mm:ss.SSS Z')
+      def progress = new File(workingDir, 'progress.txt')
+      progress << "${eol}${now} ========== STARTING SECURITY DUNIT TEST SUITE FOR ${project.name} ==========${eol}${eol}"
     }
   }
 
@@ -587,7 +655,6 @@ task publishMaven {
   }
 }
 
-
 task generateSources {
   dependsOn ':snappy-spark:generateSources'
   dependsOn ':snappy-store:generateSources'
@@ -604,12 +671,12 @@ task product(type: Zip) {
   def hasJdbcConnectorProject = new File(rootDir,
       'snappy-connectors/jdbc-stream-connector/build.gradle').exists()
 
-  if (hasAQPProject) {
+  if (hasAQPProject && rootProject.hasProperty('snappydata.enterprise')) {
     dependsOn ":snappy-aqp_${scalaBinaryVersion}:jar"
     targetProject = project(":snappy-aqp_${scalaBinaryVersion}")
   }
 
-  if (hasJdbcConnectorProject) {
+  if (hasJdbcConnectorProject && rootProject.hasProperty('snappydata.enterprise')) {
     dependsOn ":snappy-jdbc-connector_${scalaBinaryVersion}:jar"
   }
 
@@ -710,15 +777,6 @@ task product(type: Zip) {
         exclude '.git*'
       }
     }
-    // copy AQP jar from maven repo if project not present
-    if (!hasAQPProject) {
-      copy {
-        from examplesProject.configurations.testRuntime.filter {
-          it.getName().contains('snappy-aqp')
-        }
-        into "${snappyProductDir}/jars"
-      }
-    }
     copy {
       from "${examplesProject.buildDir}/libs"
       into "${snappyProductDir}/examples/jars"
@@ -791,9 +849,7 @@ distZip {
   }
 }
 
-// use the task below to prepare final release bits
-task distProduct {
-  dependsOn product, distTar, distZip
+task copyShadowJars {
   dependsOn ':snappy-store:gemfirexd-client:shadowJar'
   dependsOn ":snappy-core_${scalaBinaryVersion}:shadowJar"
 
@@ -819,6 +875,12 @@ task distProduct {
   }
 }
 
+// use the task below to prepare final release bits
+task distProduct {
+  dependsOn product, distTar, distZip
+  dependsOn copyShadowJars
+}
+
 def copyTestsCommonResources(def bdir) {
   String outdir = "${bdir}/resources/test"
   file(outdir).mkdirs()
@@ -836,7 +898,7 @@ def runScript(def execName, def workDir, def param, env = null) {
     workingDir = workDir
     args (param)
     standardOutput = stdout
-    environment 'PYTHONPATH', "${snappyProductDir}/python/lib/py4j-0.10.3-src.zip:${snappyProductDir}/python"
+    environment 'PYTHONPATH', "${snappyProductDir}/python/lib/py4j-0.10.4-src.zip:${snappyProductDir}/python"
   }
   return "${stdout}"
 }
@@ -844,7 +906,7 @@ def runScript(def execName, def workDir, def param, env = null) {
 task copyResourcesAll << {
   copyTestsCommonResources(project(":snappy-core_${scalaBinaryVersion}").buildDir)
   copyTestsCommonResources(project(":snappy-cluster_${scalaBinaryVersion}").buildDir)
-  if (new File(rootDir, 'aqp/build.gradle').exists()) {
+  if (new File(rootDir, 'aqp/build.gradle').exists() && rootProject.hasProperty('snappydata.enterprise')) {
     copyTestsCommonResources(project(":snappy-aqp_${scalaBinaryVersion}").buildDir)
   }
 }
@@ -860,22 +922,25 @@ task buildAll {
   mustRunAfter cleanAll
 }
 task buildDtests {
-  delete "${snappyProductDir}/dtests/build-artifacts/scala-${scalaBinaryVersion}/"
-  dependsOn "snappy-dtests_${scalaBinaryVersion}:packageTests"
+  dependsOn "snappy-dtests_${scalaBinaryVersion}:buildDtests"
 }
 task checkAll {
   dependsOn ':snappy-spark:scalaStyle'
-  if (project.hasProperty('store')) {
+  if (rootProject.hasProperty('store')) {
     dependsOn ':snappy-store:check'
   }
   dependsOn ":snappy-core_${scalaBinaryVersion}:check"
-  if (project.hasProperty('spark')) {
+  if (rootProject.hasProperty('spark')) {
     dependsOn ':snappy-spark:check'
   }
   dependsOn ":snappy-cluster_${scalaBinaryVersion}:check"
   dependsOn ":snappy-examples_${scalaBinaryVersion}:check"
-  if (!project.hasProperty('aqp.skip') && new File(rootDir, 'aqp/build.gradle').exists()) {
+  if (!rootProject.hasProperty('aqp.skip') && new File(rootDir, 'aqp/build.gradle').exists()
+          && rootProject.hasProperty('snappydata.enterprise')) {
     dependsOn ":snappy-aqp_${scalaBinaryVersion}:check"
+  }
+  if (!rootProject.hasProperty('smoke.skip')) {
+    dependsOn ':buildDtests', ":snappy-dtests_${scalaBinaryVersion}:scalaTest"
   }
   mustRunAfter buildAll
 }
@@ -974,8 +1039,6 @@ distTar.mustRunAfter clean, cleanAll
 distZip.mustRunAfter clean, cleanAll
 distProduct.mustRunAfter clean, cleanAll
 
-
-
 task deleteDocsDir(type: Delete) {
   delete "${rootProject.buildDir}/docs"
 }
@@ -1013,7 +1076,7 @@ task docs(type: ScalaDoc) {
   }
   source = allSource
   classpath = files(docProjects.collect { project ->
-   project.sourceSets.main.compileClasspath   
+   project.sourceSets.main.compileClasspath
   })
   destinationDir = file("${rootProject.buildDir}/docs")
 }
@@ -1023,17 +1086,11 @@ task publishDocs(type:Exec) {
   commandLine './publish-site.sh'
 }
 
-
 task precheckin {
-  dependsOn cleanAll, buildAll, checkAll, allReports
-  dependsOn ':snappy-spark:scalaStyle', docs
-  if (!project.hasProperty('smoke.skip')) {
-    dependsOn ":buildDtests"
-    dependsOn ":snappy-dtests_${scalaBinaryVersion}:scalaTest"
-  }
+  dependsOn cleanAll, buildAll, checkAll, allReports, docs
 }
 
-if (project.hasProperty('trackBuildTime') ) {
+if (rootProject.hasProperty('trackBuildTime') ) {
   buildtimetracker {
     reporters {
       summary {
@@ -1044,3 +1101,32 @@ if (project.hasProperty('trackBuildTime') ) {
     }
   }
 }
+
+// log build output to buildOutput.log
+
+def buildOutput = new File("${rootDir}/buildOutput.log")
+
+// delete build output file if it has become large
+if (buildOutput.length() > 1000000) {
+  delete buildOutput
+}
+
+import org.gradle.logging.internal.*
+
+gradle.services.get(LoggingOutputInternal).addStandardOutputListener (new StandardOutputListener () {
+  void onOutput(CharSequence output) {
+    buildOutput << output
+  }
+})
+
+gradle.services.get(LoggingOutputInternal).addStandardErrorListener (new StandardOutputListener () {
+  void onOutput(CharSequence output) {
+    buildOutput << output
+  }
+})
+
+println()
+println('-------------------------------------------------')
+println("Starting new build on ${buildDate}")
+println('-------------------------------------------------')
+println()
